# mazes_for_programmers

./: .gitignore  README.txt
01/: README.txt
02/: Makefile  cell.h  grid.h  sidewinder.c  sidewinder.h
code/01/: README.txt
code/02/: CMakeLists.txt  binary_tree.c  binary_tree_demo.c  binary_tree_demo.rb  cell.c  cell.h  grid.c  grid.h  needlibs.c  sidewinder.c  sidewinder_demo.c
code/02/inc/: binary_tree.h  cell.h  grid.h
code/02/ruby/: grid.rb  sidewinder.rb
code/02/src/: binary_tree.c  binary_tree_demo.c  cell.c  genlibs.c  grid.c  sidewinder.c  sidewinder_demo.c
code/03/: cell.rb  distances.rb
common/: CMakeLists.txt  Makefile
in_c/02/: Makefile  binary_tree.c  binary_tree_demo.c  cell.c  cell.h  grid.c  grid.h  sidewinder.c  sidewinder_demo.c
in_ruby/02/: binary_tree.rb
in_ruby/03/: binary_tree.rb  grid.rb  sidewinder.rb  sidewinder_demo.rb
